objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deposit Lead Process</fullName>
        <description>Deposit Lead Process is for Lead &amp; Referral Deposit record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pre-Call Questionnaire</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FinServ__Lead Process</fullName>
        <description>Consumer lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>LLC_BI__Treasury Management Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead CS Due Diligence</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft MNDA</fullName>
        </values>
        <values>
            <fullName>Evaluate Proposed Program Projections</fullName>
        </values>
        <values>
            <fullName>Initial Due Diligence Checklist</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pre-Call Questionnaire</fullName>
        </values>
        <values>
            <fullName>Prepare Term Sheet Presentation</fullName>
        </values>
        <values>
            <fullName>Present Term Sheet %26 Analysis</fullName>
        </values>
        <values>
            <fullName>Proceed to Detailed Due Diligence</fullName>
        </values>
        <values>
            <fullName>Prospect Questionnaire</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Review prospect%27s proposed edits</fullName>
        </values>
        <values>
            <fullName>Share term sheet with Prospect</fullName>
        </values>
        <values>
            <fullName>Share updates</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Work with Legal to develop term sheet</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead Loan Process</fullName>
        <description>Created for TBoM</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Treasury Lead Process TBOM</fullName>
        <description>Test the Treasury Lead Process for TBOM</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Annual_TM_Income__c</fullName>
        <description>Anticipated amount from yearly Treasury Fee Income.</description>
        <label>Annual TM Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Board_Approval_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Board Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CF_Actual_Annual_Treasury_Fee_Income__c</fullName>
        <label>Actual Annual Treasury Fee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Anticipated_Deposit_Amount__c</fullName>
        <label>Anticipated Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Deposit_Record_Type__c</fullName>
        <description>This field is used to identify if the created lead record is of deposit record type.</description>
        <formula>IF( RecordType.DeveloperName  = &apos;LE_nCino_Deposit&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Disqualification_Notes__c</fullName>
        <description>This field is used on Deposit and Treasury Management records</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Disqualification Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CF_Disqualification_Reason__c</fullName>
        <description>This field is used on Deposit and Treasury Management records</description>
        <label>Disqualification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Loan_Business_Individual_Record_Type__c</fullName>
        <description>This field is used to identify if the created lead record is of Loan - Business or Loan - Individual lead type.</description>
        <formula>OR(
RecordType.DeveloperName = &apos;LE_nCino_Loan_Custom&apos;,
RecordType.DeveloperName = &apos;LE_nCino_Loan_Individual&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Business/Individual Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_New_Existing__c</fullName>
        <description>This field is used on Deposit and Treasury Management records</description>
        <label>New/Existing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to Bank</fullName>
                </value>
                <value>
                    <fullName>New to Treasury</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Preferred_Method_of_Communication__c</fullName>
        <description>To track customer preference on their preferred method of communication for receiving communication and sending documentation</description>
        <label>Preferred Method of Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Business Phone</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Projected_Annual_Treasury_Fee_Income__c</fullName>
        <label>Projected Annual Treasury Fee Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Referral_Department__c</fullName>
        <description>This field is used on Deposit and Treasury Management records</description>
        <label>Referral Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>TPCG</fullName>
                </value>
                <value>
                    <fullName>Wealth Management</fullName>
                </value>
                <value>
                    <fullName>Treasury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Referral_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CF_Servicing_Level__c</fullName>
        <label>Servicing Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Management_Record_type__c</fullName>
        <description>This field is used to identify if the created lead record is of treasury management record type.</description>
        <formula>IF( RecordType.DeveloperName = &apos;LE_nCino_Treasury_Management&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Treasury Management Record type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Signed_Copy_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Counter Signed Copy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Loan_Amount__c</fullName>
        <label>Desired Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <formula>NOW()</formula>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedByMe__c</fullName>
        <formula>IF(  FinServ__ReferredByUser__c = $User.Id,True,False)</formula>
        <label>Created By Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__CreatedFromLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Created from Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Employer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ExpressedInterest__c</fullName>
        <label>Expressed Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FinServ__ProductList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this Referral rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Referrals</relationshipLabel>
        <relationshipName>HouseholdReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__PotentialValue__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Referrals</relationshipLabel>
        <relationshipName>Referral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>LeadUserReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <description>Referrer score from internal/external referrer</description>
        <formula>IF(NOT(ISBLANK(FinServ__ReferredByUser__c)),FinServ__ReferredByUser__r.FinServ__ReferrerScore__c,IF(NOT(ISBLANK(FinServ__ReferredByContact__c)),FinServ__ReferredByContact__r.FinServ__ReferrerScore__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>RelatedLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Partner with Us</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and specifies the Relationship/Account associated with the Lead. It is utilized in the Convert to Product Package operation.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field references the financial institution&apos;s Lead associated branch location. It is optional and manually populated.</description>
        <label>Branch</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CurrentGenerators__c</fullName>
        <description>This field is currently not being used.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Email_Opt_In__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field specifies if the Lead&apos;s contact is opted in for email communication. It is optional and manually populated.</description>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest__c</fullName>
        <description>This picklist field is an example of a custom multi-select picklist.</description>
        <inlineHelpText>This is an example of a custom multi-select picklist where you can select multiple options.</inlineHelpText>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This field allows users to enter additional details about a lead.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Priority__c</fullName>
        <description>This field specifies the priority of the financial institution&apos;s Lead. It is optional and manually populated.</description>
        <label>Lead Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                    <default>true</default>
                    <label>Warm</label>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Specifics__c</fullName>
        <description>This field is optional. It is manually populated. It is typically used as a dependent picklist on the Lead Source field to provide additional details.</description>
        <label>Lead Specifics</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LeadSource</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Lead_Status_Detail__c</fullName>
        <description>This field is optional. It is manually populated. This field allows users to enter additional details about the current status of a lead.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Amount__c</fullName>
        <description>This field shows the amount of the opportunity and whether it is a loan, deposit, etc. It is optional and manually populated.</description>
        <inlineHelpText>The amount of the opportunity, whether it&apos;s a loan, deposit, etc.</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Type__c</fullName>
        <description>This picklist specifies the Lead&apos;s loan type. It is optional and manually populated</description>
        <label>Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
                <value>
                    <fullName>Start-up</fullName>
                </value>
                <value>
                    <fullName>Startup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is auto-populated as a look up to a loan created when Convert to nCino is selected on the lead. This allows the financial institution and the BI tool to track converted leads</description>
        <label>Converted Lead</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Converted Lead</relationshipLabel>
        <relationshipName>ConvertedLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mobile_Phone__c</fullName>
        <description>This field captures the phone number of the lead&apos;s associated contact. It is optional and manually populated.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NumberofLocations__c</fullName>
        <description>This field tracks how many business locations the lead&apos;s associated customer may have. It is optional and manually populated.</description>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ProductInterest__c</fullName>
        <description>This field is currently not being used.</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference field looks up the Product Line of the Lead&apos;s specific product. It is a required field, as the Product Line drives the product type options. It is manually populated.</description>
        <label>Product Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Product_Line__c.LLC_BI__Non_Global_Product_Type_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Line__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Line__c</fullName>
        <description>The required picklist field is manually populated and specifies the Product Line. The options available for the Product Type and Product selections are dependent on this field.</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>SBA</fullName>
                </value>
                <value>
                    <fullName>Contract Services</fullName>
                </value>
                <value>
                    <fullName>Treasury Management</fullName>
                </value>
                <value>
                    <fullName>Business Deposits</fullName>
                </value>
                <value>
                    <fullName>Consumer Deposits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is a system generated field and specifies the Product Package the lead was converted to. The field is populated after the Convert to Product Package process is executed. The field is visible to users</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and is used to look up the Lead’s specific Product. The options available for the Product selections are dependent on the Product Line and Product Type fields. It is required and manually populated.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Type_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product__c.LLC_BI__Product_Type__r.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Type_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field is required and is used to look up the Lead’s specific Product Type. The options available for the Product Type are dependent on the Product Line and Product Line fields. It is required and manually populated.</description>
        <label>Product Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.LLC_BI__Product_Line_Reference__c</field>
                <operation>equals</operation>
                <valueField>LLC_BI__Product_Type__c.LLC_BI__Product_Line__c</valueField>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Usage_Type__c</field>
                <operation>notContain</operation>
                <value>Global</value>
            </filterItems>
            <filterItems>
                <field>LLC_BI__Product_Type__c.LLC_BI__Product_Count__c</field>
                <operation>greaterThan</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Product_Type__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>